--- a/FINAL EXAM/Another Recreation of Digit Recognition/Explore_Code_Dicoding_Sentiment_Analysis.ipynb
+++ b/FINAL EXAM/Another Recreation of Digit Recognition/Explore_Code_Dicoding_Sentiment_Analysis.ipynb
@@ -6,7 +6,7 @@
       "name": "Explore Code-Dicoding-Sentiment Analysis.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNCiu1Vp8btQO5R+6VDMNLb",
+      "authorship_tag": "ABX9TyPjFn7MZD/rSMR2yh2efMYQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,26 +32,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1. Pengenalan Tokenisasi, Sequence, dan Padding\n",
-        "\n",
-        "  Proses mengonversi kata-kata ke dalam bilangan numerik dapat kita sebut juga sebagai **tokenisasi**. Setelah melakukan tokenisasi pada teks, hal selanjutnya adalah mengubah setiap kalimat dalam teks kita ke dalam sequence. Sebuah **sequence** adalah sebuah larik yang berisi kumpulan token sesuai dengan setiap kata pada sebuah kalimat dalam teks.\n",
-        "\n",
-        "  Setelah setiap kalimat pada teks dikonversi menjadi sequence, kita harus memastikan bahwa setiap sequence sama panjang agar bisa dilatih pada model. \n",
-        "\n",
-        "  Proses untuk mengubah setiap sequence agar memiliki panjang yang sama adalah **padding**. Pada padding, setiap sequence dibuat sama panjang dengan menambahkan nilai 0 secara sufiks atau prefiks hingga mencapai panjang maksimum sequence. Selain itu padding juga dapat memotong sequence hingga panjangnya sesuai dengan panjang maksimum sequence."
-      ],
-      "metadata": {
-        "id": "oIEWbDpsQXO_"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "Kasus:\n",
         "\n",
         "Membedakan review positif dan negatif dari pelanggan kepada suatu restoran.\n",
         "\n",
-        "Dataset yang digunakan: [Yelp](https://www.kaggle.com/marklvl/sentiment-labelled-sentences-data-set) (berisi review dari beberapa restoran di US)"
+        "Dataset yang digunakan: [Yelp](https://www.kaggle.com/marklvl/sentiment-labelled-sentences-data-set) (berisi review dari beberapa restoran di US)\n",
+        "\n",
+        "Sumber belajar/explore NLP-Sentiment Analysis: [Dicoding-Pengembangan Machine Learning](https://www.dicoding.com/academies/185)"
       ],
       "metadata": {
         "id": "KVguQI7WXCPN"
@@ -60,8 +47,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1. Load dataset pada Colaboratory.\n",
-        "2. Buat dataframe dari dataset agar lebih mudah diproses"
+        "* Load dataset pada Colaboratory.\n",
+        "* Buat dataframe dari dataset agar lebih mudah diproses"
       ],
       "metadata": {
         "id": "s5n5EXr7Yslz"
@@ -82,7 +69,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "3. Melihat 5 sampel terakhir dari datase"
+        "* Melihat 5 sampel terakhir dari datase"
       ],
       "metadata": {
         "id": "ey1viURCY4f2"
@@ -255,7 +242,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "4. Bagi dataset menjadi train dan test set."
+        "* Bagi dataset menjadi train dan test set."
       ],
       "metadata": {
         "id": "hG8SJ86hZXp_"
@@ -278,7 +265,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "5. Melakukan tokenisasi dengan fungsi tokenizer supaya teks  dapat dipahami oleh model. Menerapkan tokenisasi pada data latih dan data test."
+        "* Melakukan tokenisasi dengan fungsi tokenizer supaya teks  dapat dipahami oleh model. Menerapkan tokenisasi pada data latih dan data test.\n",
+        "\n",
+        "  Proses mengonversi kata-kata ke dalam bilangan numerik dapat kita sebut juga sebagai **tokenisasi**. \n",
+        "\n",
+        "  Parameter **num_words** adalah jumlah kata yang akan dikonversi ke dalam token/bilangan numerik. Jika parameter num_words diatur sebanyak 15, hanya 15 kata yang paling sering muncul. 15 kata tersebut akan ditokenisasi dari seluruh kata pada dataset. \n",
+        "\n",
+        "  Sedangkan parameter **oov_token** adalah parameter yang berfungsi untuk mengganti kata-kata yang tidak ditokenisasi menjadi karakter tertentu."
       ],
       "metadata": {
         "id": "_UVbDDgjZyyd"
@@ -302,7 +295,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "6. Mengubah text yang telah dibuat sebelumnya ke dalam bentuk sequence menggunakan fungsi text_to_sequences."
+        "* Mengubah text yang telah dibuat sebelumnya ke dalam bentuk sequence menggunakan fungsi text_to_sequences.\n",
+        "\n",
+        " Sebuah **sekuens** adalah sebuah larik yang berisi kumpulan token sesuai dengan setiap kata pada sebuah kalimat dalam teks."
       ],
       "metadata": {
         "id": "Yl6jTBreaYr4"
@@ -323,7 +318,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "7. Menggunakan fungsi pad_sequences agar setiap sequence sama panjang"
+        "* Menggunakan fungsi pad_sequences agar setiap sequence sama panjang\n",
+        "\n",
+        "  Pada padding, setiap sequence dibuat sama panjang dengan menambahkan nilai 0 secara sufiks atau prefiks hingga mencapai panjang maksimum sequence. Selain itu padding juga dapat memotong sequence hingga panjangnya sesuai dengan panjang maksimum sequence."
       ],
       "metadata": {
         "id": "o1fLwrVAa45x"
@@ -346,7 +343,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "8. Untuk arsitektur yang akan digunakan adalah layer embedding. \n",
+        "* Untuk arsitektur yang akan digunakan adalah layer embedding. \n",
         "\n",
         "  Argumen pertama sesuai dengan jumlah vocabulary/kata yang kita pakai pada tokenizer. \n",
         "  \n",
@@ -379,7 +376,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "7. Panggil fungsi compile. \n",
+        "* Panggil fungsi compile. \n",
         "\n",
         "  Karena ini merupakan kasus klasifikasi dua kelas, maka menggunakan 'binary_crossentropy' sebagai nilai dari loss.\n",
         "\n",
@@ -405,7 +402,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "8. Melakukan pelatihan model"
+        "* Melakukan pelatihan model"
       ],
       "metadata": {
         "id": "By1DD1zSe2TQ"
